// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it matches snapshot when sorting by most likes 1`] = `
<DocumentFragment>
  <div
    class="MuiFormControl-root makeStyles-formControl-5"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
      data-shrink="true"
      id="sortVariable"
    >
      Sort projects by
    </label>
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-select-6 MuiInputBase-formControl MuiInput-formControl"
    >
      <div
        aria-haspopup="listbox"
        aria-labelledby="sort variable sortVariableSelect"
        class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
        id="sortVariableSelect"
        role="button"
        tabindex="0"
      >
        Most Likes
      </div>
      <input
        aria-hidden="true"
        class="MuiSelect-nativeInput"
        tabindex="-1"
        value="most likes"
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSelect-icon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`it matches snapshot when sorting by most recently added projects 1`] = `
<DocumentFragment>
  <div
    class="MuiFormControl-root makeStyles-formControl-8"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
      data-shrink="true"
      id="sortVariable"
    >
      Sort projects by
    </label>
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-select-9 MuiInputBase-formControl MuiInput-formControl"
    >
      <div
        aria-haspopup="listbox"
        aria-labelledby="sort variable sortVariableSelect"
        class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
        id="sortVariableSelect"
        role="button"
        tabindex="0"
      >
        Newest
      </div>
      <input
        aria-hidden="true"
        class="MuiSelect-nativeInput"
        tabindex="-1"
        value="newest"
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSelect-icon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;
